@@ -1,0 +1,1 @@
+ALTER TABLE `psss_search_results` ADD `season` smallint unsigned default NULL AFTER `session_id`; 
